--- a/index.html
+++ b/index.html
@@ -28,6 +28,6 @@
 				</ul>
 			</nav>
 		</header>
-    <script src="/index.js"></script>
+    <script src="./index.js"></script>
   </body>
 </html>
