--- a/index.html
+++ b/index.html
@@ -14,17 +14,9 @@
     </video>
 		<header>
 			<nav>
-				<i class="fas fa-bars"></i>
+				<i class="fas fa-bars noone"></i>
+				<i class="fas fa-times none"></i>
 				<ul class="nav-list none">
-					<li>
-						<a href="#">Home</a>
-					</li>
-					<li>
-						<a href="#">Home</a>
-					</li>
-					<li>
-						<a href="#">Home</a>
-					</li>
 				</ul>
 			</nav>
 		</header>
